--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <link rel="stylesheet" href="">
    </head>
    <body>
-      <h2>Awesome Sauce</h2>
+      <h2>My Name</h2>
 
 
       <script src="" async defer></script>
